Revert "Fix select overlap for Ubuntu FF"
This reverts commit 918c5587efa706af6682c8632a51d738e16ebb3f.

--- a/src/app/css/CIQ_Seed.css
+++ b/src/app/css/CIQ_Seed.css
@@ -889,9 +889,4 @@ ciq-colorpicker {
 .chartContainer span {
 	box-sizing: content-box;
 }
-
-.chartContainer select {
-	box-sizing: border-box;
-}
-
 /* #endregion */
